--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,30 @@
-version: '2'
-
+version: "3"
 services:
   db:
-    container_name: 'db'
-    image: mysql:5.7
+    image: mysql:8.0.30
     ports:
-      - '3307:3306'
+      - "30000:3306"
     environment:
-       MYSQL_DATABASE: 'docker'
-       MYSQL_PASSWORD: 'root'
-       MYSQL_ROOT_PASSWORD: 'root'
-    volumes:
-      - 'db:/var/lib/mysql'
-    command: ['mysqld', '--character-set-server=utf8mb4', '--collation-server=utf8mb4_unicode_ci']
-  redis:
-    container_name: 'redis'
-    image: 'redis:3.2.0'
+      - MYSQL_DATABASE=docker
+      # - MYSQL_USER=root
+      # - MYSQL_PASSWORD=Sagarsi@786
+      - MYSQL_ROOT_PASSWORD=Sagarsi@786
+      
+    # volumes:
+    #   - ./db:/docker-entrypoint-initdb.d/:ro
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - database=docker
+        - password=Sagarsi@786
+    command: python manage.py runserver 0.0.0.0:8000  
+    # entrypoint: ["./wait.sh"]
     ports:
-      - '6378:6379'
-    volumes:
-      - 'redisdata:/data'
-  memcached:
-    container_name: 'memcached'
-    image: 'memcached:latest'
-    ports:
-      - "11212:11211"
-  web:
-    build: .
-    command: python3 manage.py runserver 0.0.0.0:8080
-    volumes:
-      - '.:/base_directory'
-    ports:
-      - "8001:8001"
-    depends_on:
+      - "8000:8000"
+    depends_on: 
       - db
-      - redis
-      - memcached
-
-volumes:
-  redisdata:
-  db:
-  .:
+    env_file:
+      - .env
+    
